syntax = "proto3";

package yandex.cloud.priv.iam.v1;

import "google/protobuf/timestamp.proto";

message ServiceAccount {

  string id = 1;
  string folder_id = 2;

  google.protobuf.Timestamp created_at = 3;

  string name = 4;
  string description = 5;
  map<string, string> labels = 6;
}
